@@ -1,6 +1,7 @@
 28. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- option for displaying progressed file at scanning directory tree added
 	- remember last media type in adddialog
+	- ok/cancel button moved to buttom in config dialog
 
 27. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- progressbar at busydialog on loading/parsing file added
